# olympix_poc

./: .gitignore  Cargo.toml  Demo.md  INSTALLATION_GUIDE.md  README.md  app.manifest  build-installer.bat  build-installer.ps1  build.rs  olympix-installer.iss
contracts/: AccessControlVulnerability.sol  FlashLoanVulnerability.sol  FrontRunningVulnerability.sol  GasLimitVulnerability.sol  OracleManipulationVulnerability.sol  OverflowBug.sol  OverflowVulnerability.sol  OverflowWithEvent.sol  OverflowWithPayable.sol  ReentrancyVulnerability.sol  TimestampDependenceVulnerability.sol  UncheckedExternalCallVulnerability.sol  UncheckedReturnVulnerability.sol
hack_types/overflow/: mod.rs
installer/contracts/: OverflowInConstructor.sol  OverflowWithAdmin.sol  OverflowWithFallback.sol  OverflowWithLibrary.sol  OverflowWithModifier.sol
installer/patterns/regex/: integer_overflow.regex
patterns/regex/: access_control.regex  flash_loan.regex  front_running.regex  gas_limit.regex  oracle_manipulation.regex  overflow.regex  reentrancy.regex  timestamp_dependence.regex  unchecked_external_call.regex  unchecked_return.regex
patterns/rust/: overflow_detector.rs  vulnerability_detector.rs
src/: hack_types_overflow.rs  main.rs
src/gui/: app.rs  mod.rs
src/gui/views/: analysis_result.rs  contract_detail.rs  contracts_tab.rs  educational.rs  examples_tab.rs  home.rs  mod.rs  pattern_detail.rs  patterns_tab.rs  scan_tab.rs
src/models/: mod.rs
src/services/: mod.rs
src/utils/: mod.rs
