[package]
name = "olympix-pattern-tool"
version = "0.1.0"
edition = "2021"
description = "A standalone Windows application for managing Solidity contracts and exploit patterns"
authors = ["Olympix Pattern Tool"]
license = "MIT"
repository = ""

[dependencies]
eframe = "0.26.0"
egui = "0.26.0"
dirs = "5.0"
chrono = "0.4"
rfd = "0.14"

