[package]
name = "olympix-pattern-tool"
version = "0.1.0"
edition = "2021"
description = "A standalone Windows application for managing Solidity contracts and exploit patterns"
authors = ["Olympix Pattern Tool"]
license = "MIT"
repository = ""

[dependencies]
eframe = "0.26.0"
egui = "0.26.0"
dirs = "5.0"
chrono = "0.4"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"

[profile.release]

[[bin]]
name = "olympix-pattern-tool"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.windows]
icon = "favicon.ico"

